--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+bundler_args: --retry=3 --jobs=3
+cache: bundler
 language: ruby
 sudo: false
-bundler_args: "--retry=3 --jobs=3"
 rvm:
-  - 2.0
-  - 2.1
-  - 2.2
+  - 2.0.0
+  - 2.1.7
+  - 2.2.3
   - ruby-head
 matrix:
   allow_failures:
