--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: ruby
-sudo: false
 bundler_args: "--retry=3 --jobs=3"
+cache: bundler
+sudo: false
 rvm:
   - 2.0
   - 2.1
   - 2.2
+  - 2.3
   - ruby-head
 matrix:
   allow_failures:
