--- a/lib/twemoji/data/emoji-unicode-svg.yml
+++ b/lib/twemoji/data/emoji-unicode-svg.yml
@@ -806,7 +806,7 @@
 ":woman-woman-girl-girl:": https://twemoji.maxcdn.com/2/svg/1f469-200d-1f469-200d-1f467-200d-1f467.svg
 ":woman-heart-man:": https://twemoji.maxcdn.com/2/svg/1f469-200d-2764-fe0f-200d-1f468.svg
 ":woman-heart-woman:": https://twemoji.maxcdn.com/2/svg/1f469-200d-2764-fe0f-200d-1f469.svg
-":kiss::man:": https://twemoji.maxcdn.com/2/svg/1f469-200d-2764-fe0f-200d-1f48b-200d-1f468.svg
+":woman-kiss-man:": https://twemoji.maxcdn.com/2/svg/1f469-200d-2764-fe0f-200d-1f48b-200d-1f468.svg
 ":woman-kiss-woman:": https://twemoji.maxcdn.com/2/svg/1f469-200d-2764-fe0f-200d-1f48b-200d-1f469.svg
 ":family:": https://twemoji.maxcdn.com/2/svg/1f46a.svg
 ":couple:": https://twemoji.maxcdn.com/2/svg/1f46b.svg
