Fix wrong emoji code
In lib/twemoji/data/emoji-unicode{,-png,-svg}.yml,
a colon was missing in :woman::skin-tone-6: emoji's code as below.

:woman::skin-tone-6

This colon is supplemented.

--- a/lib/twemoji/data/emoji-unicode.yml
+++ b/lib/twemoji/data/emoji-unicode.yml
@@ -797,7 +797,7 @@
 ":woman::skin-tone-3:": 1f469-1f3fc
 ":woman::skin-tone-4:": 1f469-1f3fd
 ":woman::skin-tone-5:": 1f469-1f3fe
-":woman::skin-tone-6": 1f469-1f3ff
+":woman::skin-tone-6:": 1f469-1f3ff
 ":woman:": 1f469
 ":woman-woman-boy:": 1f469-200d-1f469-200d-1f466
 ":woman-woman-boy-boy:": 1f469-200d-1f469-200d-1f466-200d-1f466
